[package]
name = "mb"
version = "0.3.6"
description = "Build automation tool"
authors = ["Johannes Asal"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6"
colored = "2"
crypto-hash = "0.3.4"
dirs = "4"
dunce = "1"
figment = { version = "0.10", features = ["toml", "env", "test"] }
flate2 = "1"
git2 = { version = "0.16.1", features = ["vendored-openssl", "vendored-libgit2"] }
glob = "0.3"
koto = "0.12.0"
koto_json = "0.12.0"
koto_serialize = "0.12.0"
koto_tempfile = "0.12.0"
koto_toml = "0.12.0"
koto_yaml = "0.12.0"
lazy_static = "1"
once_cell = "1"
path-absolutize = "3.0.14"
regex = "1"
rustls = "0.20.8"
rustls-native-certs = "*"
self_update = "0.36"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shell-words = "1"
tar = "0.4"
tempfile = "3"
tera = "1"
thiserror = "1"
toml = "0.7"
ureq = { version = "2", features = ["native-certs", "gzip"] }
which = "4.4"
zip = { version = "0.6", features = ["deflate"] }

[dev-dependencies]
futures-executor = "0.3"
thiserror = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
