[package]
name = "mb"
version = "0.6.0"
description = "Build automation tool"
authors = ["Johannes Asal"]
license = "MIT"
edition = "2021"

[workspace]
members = [
    "metabuild-git",
    "metabuild-resolver",
]

[dependencies]
anyhow = "1"
auth-git2 = "0.5.3"
base64 = "0.21"
bevy_reflect = "0.13.2"
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6"
colored = "2"
crypto-hash = "0.3.4"
dirs = "4"
dunce = "1"
figment = { version = "0.10", features = ["toml", "env", "test"] }
flate2 = "1"
git2 = { version = "0.18.2", features = ["vendored-openssl", "vendored-libgit2"] }
glob = "0.3"
indexmap = "2"
koto = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_json = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_regex = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_serialize = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_tempfile = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_toml = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_yaml = { version = "0.14.1", default-features = false, features = ["rc"] }
lazy_static = "1"
once_cell = "1"
path-absolutize = "3.0.14"
regex = "1"
resolvo = "0.2.0"
rustls = "0.22.4" # keep fixed
rustls-native-certs = "*"
self_update = "0.36"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1"
tar = "0.4"
tempfile = "3"
tera = "1"
thiserror = "1"
toml = "0.7"
ureq = { version = "2.9.7", features = ["gzip", "tls"] }
url = "2.5.1"
which = "4.4"
zip = { version = "0.6", features = ["deflate"] }
metabuild-git = { path = "metabuild-git" }
metabuild-resolver = { path = "metabuild-resolver" }

[dev-dependencies]
futures-executor = "0.3"
thiserror = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
