[package]
name = "mb"
version = "0.9.0"
description = "Build automation tool"
authors = ["Johannes Asal"]
license = "MIT"
edition = "2021"

[workspace]
members = [
    "metabuild-git",
    "metabuild-resolver",
]

[dependencies]
anyhow = "1.0.94"
base64 = "0.21"
bevy_reflect = "0.13.2"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6"
colored = "2"
dirs = "5.0.1"
dunce = "1"
figment = { version = "0.10.19", features = ["toml", "env", "test"] }
flate2 = "1"
git2 = { version = "0.18.2", features = ["vendored-openssl", "vendored-libgit2"] }
glob = "0.3"
itertools = "0.13.0"
koto = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_json = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_regex = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_serialize = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_tempfile = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_toml = { version = "0.14.1", default-features = false, features = ["rc"] }
koto_yaml = { version = "0.14.1", default-features = false, features = ["rc"] }
log = "0.4.21"
md5 = "0.7.0"
metabuild-git = { path = "metabuild-git" }
metabuild-resolver = { path = "metabuild-resolver" }
path-absolutize = "3.0.14"
pretty_env_logger = "0.5.0"
self_update = "0.36"
semver = "1"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
tar = "0.4"
tempfile = "3"
tera = "1"
toml = "0.7"
ureq = { version = "2.12.1", features = ["native-certs", "gzip", "tls"] }
url = "2.5.1"
which = "4.4"
zip = { version = "0.6", features = ["deflate"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
